Working product and cart page

--- a/DatabaseCORE/Views/Home/Index.cshtml
+++ b/DatabaseCORE/Views/Home/Index.cshtml
@@ -24,6 +24,8 @@
 				<div class="wrapper">
 
 					<form asp-action="newsletterSignup">
+						<h1>Im the viewbag! @ViewBag.model</h1>
+
 						<h3>
 							Subscribe to our newsletter!
 						</h3>
