--- a/DatabaseCORE/Views/Cart/Delete.cshtml
+++ b/DatabaseCORE/Views/Cart/Delete.cshtml
@@ -42,7 +42,7 @@
         </dd>
     </dl>
     
-    <form asp-action="CartEdit">
+    <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
